[BUGFIX] Tweet button in configuration module is too narrow
Fixes: #63278
Reviewed-on: http://review.typo3.org/34767
Tested-by: Xavier Perseguers <xavier@typo3.org>

--- a/Resources/Public/Css/twitter.css
+++ b/Resources/Public/Css/twitter.css
@@ -7,7 +7,6 @@
 .custom-follow-button a {
 	position: relative;
 	display: inline-block;
-	height: 16px;
 	padding: 2px;
 	border: 1px solid #ccc;
 	font-size: 11px;
